<resources>
    <string name="app_name">HospitalWagons</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="back_button">Til baka</string>
    <string name="ok_button">Áfram</string>
    <string name="top_of_wagon">Ofan á vagni</string>
    <string-array name="medical_devices">
        <item>Hjartastuðtæki</item>
        <item>External pacemaker kapall og tilheyrandi padsar</item>
        <item>Elektróður</item>
        <item>Gelpúðar/Defib. padsar</item>
        <item>Gult nálabox</item>
        <item>AMBU-belgur og maski</item>
        <item>Súrefnisslanga (græn)</item>
        <item>Súrefniskútur</item>
        <item>Sog og safnflaska</item>
        <item>Kassi með grænni súrefnisslöngu</item>
        <item>Eftirlitsblöð fyrir bráðavagn</item>
        <item>Skráningarblöð fyrir endurlífgun</item>
        <item>Ferlar í sérhæfðri endurlífgun fullorðinna</item>
        <item>Lyftulykill</item>
        <item>Súefnismettunarmælir</item>
        <item>Hlustunarpípa</item>
    </string-array>
    <string name="medicine_drawer">Lyf</string>
    <string-array name="medicine_drawer_items">
        <item> Inj. Adrenalin 1mg/ml</item>
        <item>Inj. Adrenalin 0,1 mg /ml</item>
        <item>Inj. Atropin 0,5mg/ml</item>
        <item>Inj. Calcium Gluconate 10%</item>
        <item> Inj. Cordarone 50mg/ml</item>
        <item>Inj. Dormicum 1mg/ml</item>
        <item>Inj. Dópamin 400mg/40/mg/ml</item>
        <item>Inj. Furix 10mg/ml</item>
        <item>Inj Flumazenil 0,1mg/ml</item>
        <item>Inj Fenylefrin 0,1mg/ml</item>
        <item>Inf. Glúkósa 500mg/ml (50%)</item>
        <item>Inf. Magnesium 246mg/ml(1mmol/ml)</item>
        <item>Inj. Naloxon.HCl. 0,4 mg/ml</item>
        <item>Inf. Natríumhydrogenkarbonate 42mg/ml</item>
        <item>Inj. Natríumklóríð 0,9%</item>
        <item>Inf. Natríumklórið 0,9%	</item>
        <item>Inj. Propolipid 10mg/ml</item>
        <item>Inj. Seloken  1mg/ml</item>
        <item>Inj. Solu-Cortef 50mg/ml  + leysir</item>
        <item>Inj. Stesolid Novum/Stesolid 5mg/ml	Diazepam</item>
        <item>Inj. Tavegyl  1mg/ml</item>
        <item>Inj. Xylocard 20mg/m</item>
        <item>Mini spike</item>
        <item>Inj Esmeron 10mg/ml</item>
        <item>Inj Fentanyl 0,05mg/ml</item>
        <item>Inj. Celocurin 50mg/ml</item>7
    </string-array>
    <string-array name="medicine_drawer_info">
        <item>Adrenalin</item>
        <item>Adrenalin</item>
        <item>Atropin</item>
        <item>Calsium gluconat</item>
        <item>AmiodaronHCl</item>
        <item>MidazolamHCl</item>
        <item>Dópamín</item>
        <item>Furosemid</item>
        <item>Flumazenil</item>
        <item>Fenylefrin</item>
        <item>Glukosa</item>
        <item>Magnesiumsulfat</item>
        <item>NaloxonHCl</item>
        <item>Natríumhydrogenkarbonate</item>
        <item>Natriumklorið</item>
        <item>Natríumklorið</item>
        <item>Propofol</item>
        <item>Metoprolol</item>
        <item>Hydrocortison</item>
        <item>Diazepam</item>
        <item>Clemastin</item>
        <item>Lidocain</item>
        <item>Mini spike</item>
        <item>Rocuronium</item>
        <item>Fentanyl</item>
        <item>Suxameton</item>
    </string-array>
    <string-array name="medicine_drawer_dose">
        <item>1ml</item>
        <item>10</item>
        <item>1ml</item>
        <item>10ml</item>
        <item>3ml</item>
        <item>5ml</item>
        <item>10ml</item>
        <item>4ml</item>
        <item>5 ml</item>
        <item>5ml</item>
        <item>50ml</item>
        <item>10ml</item>
        <item>1ml</item>
        <item>250ml</item>
        <item>50ml</item>
        <item>250ml</item>
        <item>20ml</item>
        <item>5ml</item>
        <item>2ml</item>
        <item>2ml</item>
        <item>2ml</item>
        <item>5ml</item>
        <item>stk</item>
        <item>5ml</item>
        <item>2ml</item>
        <item>2ml</item>
    </string-array>
    <string-array name="medicine_drawer_type">
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>hgl</item>
        <item>hgl</item>
        <item>amp</item>
        <item>hgl</item>
        <item>hgl</item>
        <item>stk</item>
        <item>hgl</item>
        <item>amp</item>
        <item>hgl</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
        <item>stk</item>
        <item>amp</item>
        <item>amp</item>
        <item>amp</item>
    </string-array>
    <string name="drawer_one">Skúffa 1</string>
    <string-array name="drawer_one_items">
        <item>1 ml sprautur</item>
        <item>2 ml sprautur</item>
        <item>5 ml sprautur</item>
        <item>10 ml sprautur</item>
        <item>20 ml sprautur</item>
        <item>60 ml sprautur</item>
        <item>Venflonálar, hvítar</item>
        <item>Venflonálar, grænar</item>
        <item>Venflonálar, bleikar</item>
        <item>Venflonálar, bláar</item>
        <item>Neoflonnálar, barna</item>
        <item>Arteriunálar</item>
        <item>Beinmergsbor (er á E6 og 14EG)</item>
        <item>Beinmergsnálar (15mm, 25mm, 45mm) (Er á E6 og 14EG)</item>
        <item>Uppdrögunarnálar</item>
        <item>Tappar í venflo: hvítir, gulir, rauðir</item>
        <item>3 way</item>
        <item>3 way með 10 cm framlengingu</item>
        <item>Stasi</item>
        <item>Bómullarhnoðrar</item>
        <item>Sprittpúðar</item>
        <item>Plástur</item>
        <item>Curapor</item>
        <item>OpSite/Hydrofilm</item>
        <item>Einnota rakvélar</item>
        <item>Sekalon T 170 (CVK leggur, grár)</item>
        <item>Sekalon T 120 (CVK leggur, grænn</item>
        <item>Astrup sprautur</item>
        <item>Skæri</item>
    </string-array>
    <string-array name="drawer_one_type">
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>ekkert</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>ekkert</item>
        <item>ekkert</item>
        <item>ekkert</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
    </string-array>
    <string name="drawer_two">Skúffa 2</string>
    <string-array name="drawer_two_items">
        <item>Hanskar ósterilir</item>
        <item>Hanskar sterilir</item>
        <item>Sogleggir, grænir</item>
        <item>Sogleggir, hvítir</item>
        <item>Millistykki fyrir sogleggi</item>
        <item>Súrefnisgleraugu</item>
        <item>Súrefnisleggur með svamp</item>
        <item>Súrefnismaskar (NRB)</item>
    </string-array>
    <string-array name="drawer_two_quantity">
        <item>1</item>
        <item>0</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <string-array name="drawer_two_type">
        <item>kassi</item>
        <item>Nr. 6.5, 7.5, 8</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
    </string-array>
    <string name="drawer_three">Skúffa 3</string>
    <string-array name="drawer_three_items">
        <item>Laryngoscope</item>
        <item>Blöð á laryngoscope nr. 2, 3, 4</item>
        <item>Rafhlöður í laryngoscope</item>
        <item>Kokrennur nr. 1, 2, 3 (70, 80, 90, 100 mm)</item>
        <item>Maskar nr. 3, 4 og 5</item>
        <item>Barkatúbur nr. 6,5</item>
        <item>Barkatúbur nr. 7</item>
        <item>Barkatúbur nr. 7,5</item>
        <item>Barkatúbur nr. 8</item>
        <item>Leiðari fyrir barkatúbur</item>
        <item>Igel túbur</item>
        <item>Minitrack kit (Porex cricothyriodotmy Kit)</item>
        <item>Æðatöng</item>
        <item>Magilstöng</item>
        <item>Xylocain gel (lidocain)</item>
        <item>10 ml sprauta</item>
        <item>Brúnn plástur</item>
        <item>Capnographsnúra og millistykki</item>
    </string-array>
    <string-array name="drawer_three_type">
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk. af hverri stærð</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stærðir, gul, appelsínugul, græn</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
        <item>túba</item>
        <item>stk</item>
        <item> </item>
        <item>Er á E6</item>
    </string-array>
    <string name="drawer_four">Skúffa 4</string>
    <string-array name="drawer_four_items">
        <item>Stuðpadsar fyrir hjartarafstuðtæki og defi-Pads</item>
        <item>Padsar til vara fyrir externa pacemacerkapal</item>
        <item>Pappír fyrir defibrillator</item>
        <item>Nýrnabakkar</item>
        <item>Sæft vatn</item>
        <item>Þrýstipoki</item>
        <item>Pericardialsett á 14EG (er ekki á vagni E6 né á vagni 22A)</item>
    </string-array>
    <string-array name="drawer_four_type">
        <item> </item>
        <item>stk.</item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>
    <string name="drawer_five">Skúffa 5</string>
    <string-array name="drawer_five_items">
        <item>Agilia vökvasett</item>
        <item>Vökvasett, venjulegt með lofttappa</item>
        <item>Framlengingarslanga</item>
    </string-array>
    <string-array name="drawer_five_type">
        <item>stk.</item>
        <item>stk.</item>
        <item>stk.</item>
    </string-array>
    <string name="drawer_six">Skúffa 6</string>
    <string-array name="drawer_six_items">
        <item>Inf. Lidokain 0,4%</item>
        <item>Inf. Ringer Acetat</item>
        <item>Inf. Albumin 200g/l</item>
    </string-array>
    <string-array name="drawer_six_info">
        <item>Lidocain</item>
        <item>Na+, K+, Ca++, Mg++, Cl-, acetat</item>
        <item> </item>
    </string-array>
    <string-array name="drawer_six_dose">
        <item>500 ml</item>
        <item>1000 ml</item>
        <item>100 ml</item>
    </string-array>
    <string-array name="drawer_six_type">
        <item>poki</item>
        <item>poki</item>
        <item>poki</item>
    </string-array>
    <string name="drawer_seven">Skúffa 7</string>
    <string-array name="drawer_seven_items">
        <item>Inf. NaCl 0,9%</item>
        <item>Inf. NaCl 0,9%</item>
        <item>Inf. NaCl 0,9%</item>
        <item>Inf. Glúkósa 5%</item>
        <item>Inf. Glúkósa 5%</item>
    </string-array>
</resources>